[package]
name = "jumpy"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.0"
rand = "0.8.5"
noise = "0.9.0"
rand_distr = "0.4.3"
winit = "0.29"
image = "0.24"

[build-dependencies]
embed-resource = "1.6.3"